# Q3T_Sol_MonsterWayne

Capstone/: Challenges  README.md  Scenario_2_Deeper  Scenarios_dissection  The_why.md  journal.md  scenario_2.md  scenario_3.md
Capstone/hero-anchor/hero/: LICENSE
Capstone/hero-anchor/hero-anchor-program/: Anchor.toml  package-lock.json  package.json
Capstone/hero-anchor/hero-anchor-program/programs/hero-anchor-program/: Cargo.toml
Capstone/hero-anchor/hero-anchor-program/src/: error.rs  lib.rs
Capstone/hero-anchor/hero-anchor-program/src/instructions/: calculateandsplitrewards.rs  deposit.rs  initadmin.rs  initcreator.rs  inituser.rs  mod.rs  stakesol.rs  unstakesol.rs  updateuserstakeaccount.rs  updatevalidator.rs  withdrawandclosecreator.rs  withdrawrewards.rs  withdrawunstakedsol.rs
Capstone/hero-anchor/hero-anchor-program/tests/: hero-anchor-program.ts
Capstone/hero-web/hero/: README.md  package-lock.json  package.json  tsconfig.base.json
Capstone/hero-web/hero/anchor/: Anchor.toml  package.json
RS/: Cargo.toml
RS/src/: lib copy.rs  lib.rs  main.rs.old
TS/: airdrop.ts  enroll.ts  keygen.ts  package.json  transfer.ts  verify.ts  walletConverter.js
TS/cluster1/: FetchMetadataAccountData.ts  nft_image.ts  nft_metadata.ts  nft_mint.ts  spl_init copy.ts  spl_init.ts  spl_metadata.ts  spl_mint.ts  spl_transfer.ts  testWalletImport.ts  vault_close.ts  vault_deposit.ts  vault_deposit_nft.ts  vault_deposit_spl.ts  vault_init.ts  vault_withdraw.ts  vault_withdraw_nft.ts  vault_withdraw_spl.ts
TS/programs/: wba_prereq.json  wba_prereq.ts
(+73 files in other folders)
