[package]
name = "rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "2.0.3"
base58 = "0.2.0"
solana-client = "2.0.3"
solana-program = "2.0.3"
borsh = { version = "1.2.0", features = ["derive"] }
solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git" }
